HMSS-94: Implement model and initial endpoints for doctor (#4)
